# BasaScript

./: CMakeLists.txt  Doxyfile.in  README.md
lib/: geo.hpp  math.hpp
lib/geo/: circle.hpp  line.hpp  point.hpp  rectangle.hpp
lib/math/: real.cpp  real.hpp
lib/object/: array.cpp  array.hpp  dynamic_mirror.cpp  dynamic_mirror.hpp  list.cpp  list.hpp  mirror.cpp  mirror.hpp
lib/util/: any.cpp  any.hpp
src/: main.cpp
test/: CMakeLists.txt  test_geo.cpp  test_math.cpp  test_mirror.cpp
